--- a/src/components/OwlCarousel/OwlCarousel.css
+++ b/src/components/OwlCarousel/OwlCarousel.css
@@ -71,27 +71,6 @@ h6 {
   font-size: 3.5rem;
 }
 
-.slick-next,
-.slick-prev {
-  padding: 2px;
-  width: 2vw;
-  height: 2vw;
-  cursor: pointer;
-  border: none;
-  border-radius: 5vw;
-  background-color: #fff;
-  z-index: 99 !important;
-  box-shadow: rgba(70, 69, 69, 0.5) 0px 0px 10px 5px;
-  top: 40%;
-  margin: 0 2vw;
-  color: #368fb8;
-}
-
-.slick-next:hover,
-.slick-prev:hover {
-  background-color: #fff;
-}
-
 .slick-list {
   width: 100%;
   overflow: hidden;
@@ -100,4 +79,21 @@ h6 {
 .slick-active {
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 700px) {
+  .owl-text p {
+    font-size: 20px;
+  }
+
+  .card__container--inner--card h2 {
+    font-size: small;
+  }
+
+  .card__container--inner--card img {
+    max-height: 40vh;
+    width: 40vw;
+    padding: 5vh;
+    object-fit: contain;
+  }
 }
