--- a/src/components/Homepage/ServiceFeature/ServiceFeature.css
+++ b/src/components/Homepage/ServiceFeature/ServiceFeature.css
@@ -7,7 +7,7 @@
   text-align: center;
   color: #2d4953;
   padding: 50px 15px 10px 15px;
-  margin-bottom: 20px;
+  margin-bottom: 200px;
 }
 
 .feature-text {
@@ -16,6 +16,17 @@
 
 .feature-text h2 {
   margin-bottom: 5vh;
+}
+
+.feature-text h2::before {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 0 0 0.2em 0;
+  height: 1em;
+  margin-top: 0.5em;
+  width: 5.5em;
+  margin-left: -5px;
 }
 
 .cards {
@@ -35,9 +46,9 @@
 }
 
 .card-img {
-  height: 30vh;
-  width: 30vh;
-  border-radius: 50%;
+  height: 20vh;
+  width: 20vh;
+  border-radius: 5%;
 }
 
 .card-heading {
@@ -48,25 +59,6 @@
   width: 75%;
   min-height: 20%;
   font-size: 15px;
-}
-
-.card-btn {
-  margin: 8px auto;
-  width: 30%;
-  height: 40px;
-  border: 1px #21a4d8 solid;
-  background-color: #21a4d8d3;
-  color: rgb(230, 247, 247);
-  border-radius: 8px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-btn a {
-  font-size: 100%;
-  color: rgb(230, 247, 247);
 }
 
 @media screen and (max-width: 960px) {
@@ -84,18 +76,5 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
-  }
-
-  .card-btn {
-    width: 20%;
-    height: 80px;
-    border: 1px #21a4d8 solid;
-    background-color: #21a4d8d3;
-    color: rgb(230, 247, 247);
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 }
