--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,14 +17,26 @@ Navbar
 ===============
 */
 nav {
+  width: 100%;
+  min-height: 80px;
+  max-height: 80px;
   background: var(--clr-white);
   box-shadow: var(--light-shadow);
+  position: fixed;
+  z-index: 9999;
+}
+
+.nav-center {
+  max-width: 1170px;
+  margin: 10px 0;
+  align-items: center;
+  justify-content: space-between;
 }
 .nav-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 .nav-toggle {
   font-size: 1.5rem;
@@ -34,16 +46,14 @@ nav {
   transition: var(--transition);
   cursor: pointer;
 }
-.nav-toggle:hover {
-  color: var(--clr-primary-1);
-  transform: rotate(90deg);
-}
+
 .logo {
-  height: 40px;
+  width: 140px;
+  height: 62px;
   font-size: 25px;
   font-weight: bold;
   color: #21a4d8;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .links a {
   color: var(--clr-grey-3);
@@ -56,7 +66,6 @@ nav {
 }
 .links a:hover {
   background: var(--clr-primary-8);
-  color: var(--clr-primary-5);
   padding-left: 1.5rem;
 }
 .btn {
@@ -66,6 +75,7 @@ nav {
   height: 0;
   overflow: hidden;
   transition: var(--transition);
+  background-color: white;
 }
 .show-container {
   height: 10rem;
@@ -73,30 +83,34 @@ nav {
 @media screen and (min-width: 900px) {
   .nav-center {
     max-width: 1170px;
-    margin: 0 auto;
+    margin: 10px 2%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
   }
   .nav-header {
     padding: 0;
+    width: fit-content;
   }
+
+  .nav-header div {
+    width: min-content;
+  }
+
   .nav-toggle {
     display: none;
   }
   .links-container {
-    width: 300px;
+    width: 650px;
     height: auto !important;
     display: flex;
-    width: fit-content;
   }
   .links {
     display: flex;
   }
   .links a {
     padding: 0;
-    margin: 0 0.5rem;
+    margin: 0 1.2rem;
     display: flex;
   }
   .links a:hover {
@@ -125,5 +139,63 @@ nav {
   .nav-content {
     display: flex;
     justify-content: space-between;
+  }
+
+  .links-container .links {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    list-style: none;
+    padding: auto;
+    height: 100%;
+  }
+
+  .links-container .links a {
+    text-align: end;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    /* color: white; */
+    height: 100%;
+    width: 90px;
+    justify-content: center;
+  }
+
+  .links-container .links a::before {
+    content: "";
+    position: absolute;
+    /* border-color: #ffffff; */
+    border-style: solid;
+    border-width: 0 0 0.2em 0;
+    height: 1em;
+    margin-top: 1em;
+    width: 5.5em;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+  }
+
+  .links-container .links a:hover::before {
+    content: "";
+    position: absolute;
+    /* border-color: #ffffff; */
+    border-style: solid;
+    border-width: 0 0 0.2em 0;
+    height: 1em;
+    margin-top: 1em;
+    width: 5.5em;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .links a {
+    align-items: center;
   }
 }
